--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,618 @@
-/* line 1, ../scss/main.scss */
-body {
-  font-family: 'Helvetica', Arial, sans;
-  font-size: 4em;
-  font-weight: 800;
-  text-transform: uppercase;
+/*------------------------------------*\
+    MIRRORS OR MOVERS 
+\*------------------------------------*/
+/**
+ * The SCSS in this project is written in an Object Orientated manner (OOCSS),
+ * https://github.com/stubbornella/oocss/wiki and follows some Scalable and
+ * Modular Architecture for CSS (SMACSS) principles.
+ */
+/*------------------------------------*\
+    $CONTENTS
+\*------------------------------------*/
+/**
+ *
+ * The stylesheet is laid out into roughly five rule sets:
+ * 1 - Base rules
+ * 2 - Layout rules
+ * 3 - Module rules
+ * 4 - State rules
+ * 5 - Theme rules
+ *
+ */
+/*------------------------------------*\
+    1. BASE RULES
+\*------------------------------------*/
+/*------------------------------------*\
+    BASE/RESET
+\*------------------------------------*/
+/**
+ * A custom normalized reset. Thanks to Nicolas Gallagher.
+ *
+ * Customisations include:
+ * ul, li 
+ * h1, h2, h3, h4, h5, h6
+ */
+/*! normalize.css v2.1.3 | MIT License | git.io/normalize */
+/* ==========================================================================
+   HTML5 display definitions
+   ========================================================================== */
+/**
+ * Correct `block` display not defined in IE 8/9.
+ */
+/* line 34, ../scss/base/_reset.scss */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+nav,
+section,
+summary {
+  display: block;
 }
+
+/**
+ * Correct `inline-block` display not defined in IE 8/9.
+ */
+/* line 45, ../scss/base/_reset.scss */
+audio,
+canvas,
+progress,
+video {
+  display: inline-block;
+}
+
+/**
+ * Prevent modern browsers from displaying `audio` without controls.
+ * Remove excess height in iOS 5 devices.
+ */
+/* line 54, ../scss/base/_reset.scss */
+audio:not([controls]) {
+  display: none;
+  height: 0;
+}
+
+/**
+ * Address `[hidden]` styling not present in IE 8/9.
+ * Hide the `template` element in IE, Safari, and Firefox < 22.
+ */
+/* line 65, ../scss/base/_reset.scss */
+[hidden],
+template {
+  display: none;
+}
+
+/* ==========================================================================
+   Base
+   ========================================================================== */
+/**
+ * 1. Set default font family to sans-serif.
+ * 2. Prevent iOS text size adjust after orientation change, without disabling
+ *    user zoom.
+ */
+/* line 79, ../scss/base/_reset.scss */
+html {
+  font-family: sans-serif;
+  /* 1 */
+  -ms-text-size-adjust: 100%;
+  /* 2 */
+  -webkit-text-size-adjust: 100%;
+  /* 2 */
+}
+
+/**
+ * Remove default margin.
+ */
+/* line 89, ../scss/base/_reset.scss */
+body {
+  margin: 0;
+}
+
+/* ==========================================================================
+   Links
+   ========================================================================== */
+/**
+ * Remove the gray background color from active links in IE 10.
+ */
+/* line 101, ../scss/base/_reset.scss */
+a {
+  background: transparent;
+}
+
+/**
+ * Improve readability when focused and also mouse hovered in all browsers.
+ */
+/* line 110, ../scss/base/_reset.scss */
+a:active,
+a:hover {
+  outline: 0;
+}
+
+/* ==========================================================================
+   Typography
+   ========================================================================== */
+/**
+ * Address variable `h1` font-size and margin within `section` and `article`
+ * contexts in Firefox 4+, Safari 5, and Chrome.
+ */
+/* line 123, ../scss/base/_reset.scss */
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+/**
+ * Address styling not present in IE 8/9, Safari 5, and Chrome.
+ */
+/* line 132, ../scss/base/_reset.scss */
+abbr[title] {
+  border-bottom: 1px dotted;
+}
+
+/**
+ * Address style set to `bolder` in Firefox 4+, Safari 5, and Chrome.
+ */
+/* line 141, ../scss/base/_reset.scss */
+b,
+strong {
+  font-weight: bold;
+}
+
+/**
+ * Address styling not present in Safari 5 and Chrome.
+ */
+/* line 149, ../scss/base/_reset.scss */
+dfn {
+  font-style: italic;
+}
+
+/**
+ * Address differences between Firefox and other browsers.
+ */
+/* line 157, ../scss/base/_reset.scss */
+hr {
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  height: 0;
+}
+
+/**
+ * Address styling not present in IE 8/9.
+ */
+/* line 167, ../scss/base/_reset.scss */
+mark {
+  background: #ff0;
+  color: #000;
+}
+
+/**
+ * Correct font family set oddly in Safari 5 and Chrome.
+ */
+/* line 179, ../scss/base/_reset.scss */
+code,
+kbd,
+pre,
+samp {
+  font-family: monospace, serif;
+  font-size: 1em;
+}
+
+/**
+ * Improve readability of pre-formatted text in all browsers.
+ */
+/* line 188, ../scss/base/_reset.scss */
+pre {
+  white-space: pre-wrap;
+}
+
+/**
+ * Set consistent quote types.
+ */
+/* line 196, ../scss/base/_reset.scss */
+q {
+  quotes: "\201C" "\201D" "\2018" "\2019";
+}
+
+/**
+ * Address inconsistent and variable font size in all browsers.
+ */
+/* line 204, ../scss/base/_reset.scss */
+small {
+  font-size: 80%;
+}
+
+/**
+ * Prevent `sub` and `sup` affecting `line-height` in all browsers.
+ */
+/* line 213, ../scss/base/_reset.scss */
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+/* line 220, ../scss/base/_reset.scss */
+sup {
+  top: -0.5em;
+}
+
+/* line 224, ../scss/base/_reset.scss */
+sub {
+  bottom: -0.25em;
+}
+
+/* ==========================================================================
+   Embedded content
+   ========================================================================== */
+/**
+ * Remove border when inside `a` element in IE 8/9.
+ */
+/* line 236, ../scss/base/_reset.scss */
+img {
+  border: 0;
+}
+
+/**
+ * Correct overflow displayed oddly in IE 9.
+ */
+/* line 244, ../scss/base/_reset.scss */
+svg:not(:root) {
+  overflow: hidden;
+}
+
+/* ==========================================================================
+   Figures
+   ========================================================================== */
+/**
+ * Address margin not present in IE 8/9 and Safari 5.
+ */
+/* line 256, ../scss/base/_reset.scss */
+figure {
+  margin: 1em 40px;
+}
+
+/* ==========================================================================
+   Forms
+   ========================================================================== */
+/**
+ * 1. Define consistent border, margin, and padding.
+ * 2. Address width being affected by wide descendants in Chrome and Firefox.
+ */
+/* line 269, ../scss/base/_reset.scss */
+fieldset {
+  border: 1px solid #c0c0c0;
+  /* 1 */
+  margin: 0 2px;
+  /* 1 */
+  min-width: 0;
+  /* 2 */
+  padding: 0.35em 0.625em 0.75em;
+  /* 1 */
+}
+
+/**
+ * 1. Correct `color` not being inherited in IE 8/9.
+ * 2. Remove padding so people aren't caught out if they zero out fieldsets.
+ */
+/* line 281, ../scss/base/_reset.scss */
+legend {
+  border: 0;
+  /* 1 */
+  padding: 0;
+  /* 2 */
+}
+
+/**
+ * 1. Correct color not being inherited in all browsers.
+ *    Known issue: `select` will not inherit color in Chrome and Safari on OS X.
+ * 2. Correct font properties not being inherited in all browsers.
+ * 3. Address margins set differently in Firefox 4+, Safari 5, and Chrome.
+ */
+/* line 297, ../scss/base/_reset.scss */
+button,
+input,
+optgroup,
+select,
+textarea {
+  color: inherit;
+  /* 1 */
+  font: inherit;
+  /* 2 */
+  margin: 0;
+  /* 3 */
+}
+
+/**
+ * Re-apply the `font-weight` to avoid modifying the default UX, and because
+ * the default cannot be changed in Chrome and Safari on OS X.
+ */
+/* line 308, ../scss/base/_reset.scss */
+optgroup {
+  font-weight: bold;
+}
+
+/**
+ * Address Firefox 4+ setting `line-height` on `input` using `!important` in
+ * the UA stylesheet.
+ */
+/* line 318, ../scss/base/_reset.scss */
+button,
+input {
+  line-height: normal;
+}
+
+/**
+ * Address inconsistent `text-transform` inheritance for `button` and `select`.
+ * All other form control elements do not inherit `text-transform` values.
+ * Correct `button` style inheritance in Chrome, Safari 5+, and IE 8+.
+ * Correct `select` style inheritance in Firefox 4+ and Opera.
+ */
+/* line 330, ../scss/base/_reset.scss */
+button,
+select {
+  text-transform: none;
+}
+
+/**
+ * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
+ *    and `video` controls.
+ * 2. Correct inability to style clickable `input` types in iOS.
+ * 3. Improve usability and consistency of cursor style between image-type
+ *    `input` and others.
+ */
+/* line 345, ../scss/base/_reset.scss */
+button,
+html input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+  -webkit-appearance: button;
+  /* 2 */
+  cursor: pointer;
+  /* 3 */
+}
+
+/**
+ * Re-set default cursor for disabled elements.
+ */
+/* line 355, ../scss/base/_reset.scss */
+button[disabled],
+html input[disabled] {
+  cursor: default;
+}
+
+/**
+ * 1. Address box sizing set to `content-box` in IE 8/9/10.
+ * 2. Remove excess padding in IE 8/9/10.
+ */
+/* line 365, ../scss/base/_reset.scss */
+input[type="checkbox"],
+input[type="radio"] {
+  box-sizing: border-box;
+  /* 1 */
+  padding: 0;
+  /* 2 */
+}
+
+/**
+ * 1. Address `appearance` set to `searchfield` in Safari 5 and Chrome.
+ * 2. Address `box-sizing` set to `border-box` in Safari 5 and Chrome
+ *    (include `-moz` to future-proof).
+ */
+/* line 376, ../scss/base/_reset.scss */
+input[type="search"] {
+  -webkit-appearance: textfield;
+  /* 1 */
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+  /* 2 */
+  box-sizing: content-box;
+}
+
+/**
+ * Remove inner padding and search cancel button in Safari 5 and Chrome
+ * on OS X.
+ */
+/* line 389, ../scss/base/_reset.scss */
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+/**
+ * Remove inner padding and border in Firefox 4+.
+ */
+/* line 398, ../scss/base/_reset.scss */
+button::-moz-focus-inner,
+input::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+}
+
+/**
+ * 1. Remove default vertical scrollbar in IE 8/9.
+ * 2. Improve readability and alignment in all browsers.
+ */
+/* line 408, ../scss/base/_reset.scss */
+textarea {
+  overflow: auto;
+  /* 1 */
+  vertical-align: top;
+  /* 2 */
+}
+
+/* ==========================================================================
+   Tables
+   ========================================================================== */
+/**
+ * Remove most spacing between table cells.
+ */
+/* line 421, ../scss/base/_reset.scss */
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* line 427, ../scss/base/_reset.scss */
+td,
+th {
+  padding: 0;
+}
+
+/*------------------------------------*\
+    CUSTOMISATIONS
+\*------------------------------------*/
+/* line 436, ../scss/base/_reset.scss */
+ul, li {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+/* line 442, ../scss/base/_reset.scss */
+h1, h2, h3, h4, h5, h6 {
+  padding: 0;
+  margin: 0;
+}
+
+/* line 447, ../scss/base/_reset.scss */
+*, *:before, *:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+/*------------------------------------*\
+    BASE/VARS.SCSS
+\*------------------------------------*/
+/**
+ * Colour Variables
+ */
+/**
+ * Size Variables
+ */
+/**
+ * Font Variables
+ */
+/**
+ * Spacing Variables
+ */
+/*------------------------------------*\
+    BASE/MIXINS.SCSS
+\*------------------------------------*/
+/**
+ * Media Query Mixin
+ */
+/**
+ * Responsive Text Mixin
+ */
+/*------------------------------------*\
+    BASE/EXTENDS.SCSS
+\*------------------------------------*/
+/**
+ * Clear Fix
+ * thanks to: nicolasgallagher.com
+ */
+/* line 11, ../scss/base/_extends.scss */
+.cf:before,
+.cf:after {
+  content: " ";
+  /* 1 */
+  display: table;
+  /* 2 */
+}
+
+/* line 16, ../scss/base/_extends.scss */
+.cf:after {
+  clear: both;
+}
+
+/**
+ * For IE 6/7 only
+ * Include this rule to trigger hasLayout and contain floats.
+ */
+/* line 24, ../scss/base/_extends.scss */
+.cf {
+  *zoom: 1;
+}
+
+/*------------------------------------*\
+    BASE/ELEMENTS.SCSS
+\*------------------------------------*/
+/*------------------------------------*\
+    BASE/TYPOGRAPHY.SCSS
+\*------------------------------------*/
+/* line 5, ../scss/base/_typography.scss */
+.font-main, body {
+  font-family: 'Helvetica Neue', 'Helvetica', Arial, sans-serif;
+}
+
+/*------------------------------------*\
+    BASE/BASE.SCSS
+\*------------------------------------*/
+/*------------------------------------*\
+    2. LAYOUT RULES
+\*------------------------------------*/
+/*------------------------------------*\
+    LAYOUT/PAGE.SCSS
+\*------------------------------------*/
+/* line 5, ../scss/layout/_page.scss */
+.wrapper {
+  width: 100%;
+}
+
+/* line 9, ../scss/layout/_page.scss */
+.page-constrained, .tickets {
+  margin: 0 auto;
+  padding: 20px;
+  max-width: 1025px;
+}
+@media only screen and (max-width: 767px) {
+  /* line 9, ../scss/layout/_page.scss */
+  .page-constrained, .tickets {
+    padding: 10px;
+  }
+}
+
+/*------------------------------------*\
+    3. MODULE RULES
+\*------------------------------------*/
+/*------------------------------------*\
+    MODULE/TICKETS.SCSS
+\*------------------------------------*/
+/* line 5, ../scss/module/_tickets.scss */
+.tickets {
+  margin: 0 auto;
+  max-width: 800px;
+  background-color: white;
+}
+@media only screen and (min-width: 768px) and (max-width: 960px) {
+  /* line 5, ../scss/module/_tickets.scss */
+  .tickets {
+    max-width: 600px;
+  }
+}
+@media only screen and (max-width: 767px) {
+  /* line 5, ../scss/module/_tickets.scss */
+  .tickets {
+    width: 100%;
+  }
+}
+
+/* line 18, ../scss/module/_tickets.scss */
+.tickets__wrapper {
+  background-color: red;
+}
+
+/*------------------------------------*\
+    4. STATE RULES
+\*------------------------------------*/
+/*------------------------------------*\
+    5. THEME RULES
+\*------------------------------------*/
