--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -8,6 +8,7 @@
  */
 $black: #111;
 $white: white;
+$silver: #DDD;
 
 /**
  * Size Variables
@@ -20,7 +21,7 @@ $site-max-width: 1025px;
  */
 $font-size: $base-unit;
 $font-size--tab: 0.9;
-$font-size--mob: 0.7;
+$font-size--mob: 0.5;
 
 /**
  * Spacing Variables
