--- a/scss/main.scss
+++ b/scss/main.scss
@@ -52,6 +52,10 @@
 \*------------------------------------*/
 
 @import "module/tickets.scss";
+@import "module/big-video.scss";
+@import "module/homepage.scss";
+@import "module/icon-links.scss";
+
 
 
 /*------------------------------------*\
