--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -7,8 +7,12 @@
  * Colour Variables
  */
 $black: #111;
-$white: white;
+$white: #eee;
 $silver: #DDD;
+$navy: #001F3F;
+$sky-blue: #b4eff2;
+$red: #FF4136;
+$purple: #4C252D;
 
 /**
  * Size Variables
