--- a/scss/main.scss
+++ b/scss/main.scss
@@ -53,8 +53,14 @@
 
 @import "module/tickets.scss";
 @import "module/big-video.scss";
-@import "module/homepage.scss";
+@import "module/title.scss";
 @import "module/icon-links.scss";
+
+@import "module/homepage.scss";
+@import "module/home.scss";
+@import "module/more-info.scss";
+@import "module/social.scss";
+@import "module/tickets-bar.scss";
 
 
 
