--- a/scss/base/_imports.scss
+++ b/scss/base/_imports.scss
@@ -8,5 +8,6 @@
 
 /* Abril Fatface */
 @import url(http://fonts.googleapis.com/css?family=Abril+Fatface);
-
+/* Playfair Displace SC */
+@import url(http://fonts.googleapis.com/css?family=Playfair+Display+SC:900italic);
 
