--- a/scss/main.scss
+++ b/scss/main.scss
@@ -61,6 +61,7 @@
 @import "module/more-info.scss";
 @import "module/social.scss";
 @import "module/tickets-bar.scss";
+@import "module/trailer.scss";
 
 
 
