thank you for coming

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -58,11 +58,11 @@
 
 @import "module/homepage.scss";
 @import "module/home.scss";
+@import "module/thanks.scss";
 @import "module/more-info.scss";
 @import "module/social.scss";
 @import "module/tickets-bar.scss";
 @import "module/trailer.scss";
-
 
 
 /*------------------------------------*\
