--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,7 @@
  */
 @import url(http://fonts.googleapis.com/css?family=Abril+Fatface);
 @import url(http://fonts.googleapis.com/css?family=Playfair+Display+SC:900italic);
+@import url(http://fonts.googleapis.com/css?family=Vollkorn:400italic);
 /* line 34, ../scss/base/_reset.scss */
 article,
 aside,
@@ -513,6 +514,7 @@ h1, h2, h3, h4, h5, h6 {
  */
 /* Abril Fatface */
 /* Playfair Displace SC */
+/* Volkhorn */
 /*------------------------------------*\
     BASE/MIXINS.SCSS
 \*------------------------------------*/
@@ -591,12 +593,17 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Playfair Display SC', Georgia, serif;
 }
 
-/* line 18, ../scss/base/_typography.scss */
+/* line 17, ../scss/base/_typography.scss */
+.font-poem {
+  font-family: 'Vollkorn', Georgia, serif;
+}
+
+/* line 22, ../scss/base/_typography.scss */
 h1, h2, h3, h4 {
   font-weight: 300;
 }
 
-/* line 23, ../scss/base/_typography.scss */
+/* line 27, ../scss/base/_typography.scss */
 p {
   padding-bottom: 4px;
 }
@@ -611,19 +618,19 @@ p {
     LAYOUT/PAGE.SCSS
 \*------------------------------------*/
 /* line 5, ../scss/layout/_page.scss */
-.wrapper, .home__wrapper, .more-info__wrapper, .social__wrapper, .tickets-bar__wrapper, .trailer__wrapper {
+.wrapper, .home__wrapper, .thanks__wrapper, .more-info__wrapper, .social__wrapper, .tickets-bar__wrapper, .trailer__wrapper {
   width: 100%;
 }
 
 /* line 9, ../scss/layout/_page.scss */
-.page-constrained, .tickets, .home__header, .more-info, .social, .tickets-bar, .trailer {
+.page-constrained, .tickets, .home__header, .thanks__header, .more-info, .social, .tickets-bar, .trailer {
   margin: 0 auto;
   padding: 20px;
   max-width: 1025px;
 }
 @media only screen and (max-width: 767px) {
   /* line 9, ../scss/layout/_page.scss */
-  .page-constrained, .tickets, .home__header, .more-info, .social, .tickets-bar, .trailer {
+  .page-constrained, .tickets, .home__header, .thanks__header, .more-info, .social, .tickets-bar, .trailer {
     padding: 10px;
   }
 }
@@ -948,6 +955,20 @@ p {
 .home__arrow-down {
   padding-top: 20px;
   width: 64px;
+}
+
+/*------------------------------------*\
+    MODULE/THANKS.SCSS
+\*------------------------------------*/
+/* line 6, ../scss/module/_thanks.scss */
+.thanks__wrapper {
+  background-color: #eeeeee;
+}
+
+/* line 11, ../scss/module/_thanks.scss */
+.thanks__header {
+  padding-top: 10%;
+  text-align: center;
 }
 
 /*------------------------------------*\
