--- a/scss/base/_imports.scss
+++ b/scss/base/_imports.scss
@@ -10,4 +10,5 @@
 @import url(http://fonts.googleapis.com/css?family=Abril+Fatface);
 /* Playfair Displace SC */
 @import url(http://fonts.googleapis.com/css?family=Playfair+Display+SC:900italic);
-
+/* Volkhorn */
+@import url(http://fonts.googleapis.com/css?family=Vollkorn:400italic);
