--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -14,6 +14,10 @@
     font-family: 'Playfair Display SC', Georgia, serif;   
 }
 
+.font-poem {
+    font-family: 'Vollkorn', Georgia, serif;   
+}
+
 
 h1, h2, h3, h4 {
     @extend .font-header;
