--- a/scss/main.scss
+++ b/scss/main.scss
@@ -63,6 +63,9 @@
 @import "module/social.scss";
 @import "module/tickets-bar.scss";
 @import "module/trailer.scss";
+@import "module/release.scss";
+@import "module/facebook-album.scss";
+
 
 
 /*------------------------------------*\
